-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 14.0.2
-
None
-
711c6d850 (14.0)
clang 19 hit debian unstable, and this is what i get:
.../qtcreator/src/plugins/clangformat/clangformatutils.cpp: In function ‘clang::format::FormatStyle ClangFormat::calculateQ tcStyle()’: .../qtcreator/src/plugins/clangformat/clangformatutils.cpp:44:75: warning: missing initializer for member ‘clang::format::F ormatStyle::AlignConsecutiveStyle::PadOperators’ [-Wmissing-field-initializers] 44 | style.AlignConsecutiveAssignments = {false, false, false, false, false}; | ^ .../qtcreator/src/plugins/clangformat/clangformatutils.cpp:45:76: warning: missing initializer for member ‘clang::format::F ormatStyle::AlignConsecutiveStyle::PadOperators’ [-Wmissing-field-initializers] 45 | style.AlignConsecutiveDeclarations = {false, false, false, false, false}; | ^ .../qtcreator/src/plugins/clangformat/clangformatutils.cpp:120:11: error: ‘struct clang::format::FormatStyle’ has no member named ‘KeepEmptyLinesAtTheStartOfBlocks’ 120 | style.KeepEmptyLinesAtTheStartOfBlocks = false; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
if clang 19 is out of scope for qtc 14, then the build system should reject it. but i expect this to be a minor fix, so such extreme measures seem unnecessary.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31758 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
596015,4 | ClangFormat: Adjust for clang-format 19 and 20 | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |