ClangFormat: Adjust for clang-format 19 and 20

Fixes: QTCREATORBUG-31758
Change-Id: I4ed1980d55875a364562585c5c31823ff97674dd
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@gmx.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>